# mboitata

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: allow_list.rs  config.rs  main.rs
src/analyzer/: event.rs  intercepted.rs  mod.rs  router.rs  setup.rs  stage.rs
src/analyzer/stages/: filter_stage.rs  map_stage.rs  mod.rs  save_file_stage.rs  scan_js_stage.rs  scan_stage.rs  utils.rs
src/analyzer/stages/js/: analyzer.rs  extractor.rs  mod.rs  types.rs  usage.rs
src/consumer/: mod.rs
src/navigator/: mod.rs
src/proxy/: certs.rs  http.rs  https.rs  mod.rs
src/stages/: event.rs  filter_stage.rs  map_stage.rs  mod.rs  router.rs  save_file.rs  scan_stage.rs  setup.rs  stage.rs
