[package]
name = "mboitata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hyper = { version="1.6.0", features=["full"]}
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version="1.46.1", features=["full"]}
pki-types = { package = "rustls-pki-types", version = "1" }
tokio-rustls = "0.26.2"
rcgen = { version="0.14.3", features=["pem", "x509-parser"]}
webpki-roots = "1.0.2"
clap = { version="4.5.41", features = ["derive", "env"] }
url = "2.5.4"
reqwest = { version = "0.12.22", features = ["rustls-tls"] }
regex = "1.11.1"
sourcemap = "9.2.2"
rustls = { version = "0.23.31", features = ["ring"] }
flate2 = "1.1.2"
brotli = "8.0.1"
async-trait = "0.1.88"
sanitize-filename = "0.6.0"
sha2 = "0.10.9"
hex = "0.4.3"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}